--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,7 @@ body{
     border-radius: 2px;
     color: rgba(0, 0, 0, 0.5);
     text-align: center;
+    /* text-transform: capitalize; */
 }
 
 .search-box::placeholder{
