--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,47 +1,93 @@
 .login-form {
-    border: 1px solid gray;
-    border-radius: 20px;
-    padding: 30px;
-    margin: 100px auto 0 auto;
-    max-width: 500px;
-    display: grid;
-    justify-content: center;
-    align-items: center;
+    margin: 30px auto;
+   text-align: center;
+   width:360px
 }
 
-.flex_block {
-    display: flex;
-    justify-content: center;
-    column-gap: 20px;
-    width: 100%;
+.login-input {
+    width:300px;
+    height:40px;
+    border:1px solid #DBDBDB;
+    text-align: start;
+    padding: 8px;
+    
 }
 
-.login-form input {
-    background-color: #fafafa;
-    border-radius: 10px;
-    padding: 5px;
-    height: 30px;
-    border: 1px solid darkgray;
+.check {
+    font-size: 10px;
+    
 }
 
-.login-form button{
-    background-color: #999999;
-    border: 1px solid black;
-    border-radius: 10px;
-    height: 30px;
-    padding: 0 10px 0 10px;
-    color: white;
-    cursor: pointer;
-    transition: .3s;
+.form-row img {
+    margin:30px auto;
+    
 }
 
-.login-form h3 {
-    margin-bottom: 30px;
+.side-row {
+    display:flex;
+    flex-direction: column;
+}
+
+.img {
+    background-image: url(https://static.cdninstagram.com/images/instagram/xig/homepage/phones/home-phones.png?__makehaste_cache_breaker=HOgRclNOosk);
+    background-repeat: no-repeat;
+    width:100%;
+    height:600px;
+    position:relative
+}
+
+.prof {
+    width: 257px;
+    position: absolute;
+    height: 519px;
+    top: 51px;
+    left: 153px;
+    border-radius: 23px;
+}
+
+
+.signup {
+    width:370px;
+    border:1px solid #DBDBDB;
+    margin: 15px auto;
+    padding:25px
+}
+
+.signup span {
+    color:#4DB5F9;
+    font-weight: 550;
+}
+
+.signup p {
     text-align: center;
-    font-size: 25px;
+    font-size:15px
 }
 
-.login-form button:hover{
-    transition: .3s;
-    opacity: .8;
+.form-row {
+    border:1px solid #DBDBDB;
+    width:370px;
+    display:flex;
+    align-items: flex-start;
+    flex-direction: column;
+    height:441.98px
+}
+
+.row {
+    display:flex;
+    width:810px;
+    margin:30px auto
+}
+
+.submit {
+    cursor: pointer;
+    padding:4px;
+    font-size:20px;
+    width:130px;
+    color:#ffffff;
+    margin: 15px 0;
+    width:300px;
+    border-radius:10px;
+    border: solid transparent;
+    background-color: #4DB5F9;
+    
 }
