--- a/src/components/MessengerChatForm/MessengerChatForm.css
+++ b/src/components/MessengerChatForm/MessengerChatForm.css
@@ -1,8 +1,9 @@
 .Chat-input{
+	position: absolute;
 	bottom: 0;
 	line-height: 40px;
 	border: 1px solid #dfdfdf;
-	width: 97%;
+	width: 45%;
 	margin: 10px 11px;
 	border-radius: 20px;
 	padding: 0 15px;
