--- a/src/components/MessengerChatSection/MessengerChatSection.css
+++ b/src/components/MessengerChatSection/MessengerChatSection.css
@@ -4,10 +4,6 @@
 	
 }
 
-.MessengerChat {
-	min-height: 500px;
-}
-
 .UserSction{
 	display: flex;
 	justify-content: space-between;
@@ -19,3 +15,7 @@
 	border-bottom: 1px solid #dfdfdf;
 }
 
+.Messenger-right-col .Chat{
+	height: 725px;
+	overflow: auto;
+}
