--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -51,14 +51,7 @@ img {
 .btn:focus {
 	outline: 0.5rem auto #4d90fe;
 }
-.del{
-	color: red;
-	position: absolute;
-	top: 5px;
-	right: 15px;
-	font-size: 24px;
-	font-weight: 800;
-}
+
 .followBtn{
     width:100%;
     height: 30px;
@@ -76,11 +69,19 @@ img {
 	clip: rect(1px, 1px, 1px, 1px);
 }
 
+.del {
+	color: white;
+	position:absolute;
+	top:5px;
+	right:15px;
+	font-size:24px;
+	font-weight: 800;
+}
+
 /* Profile Section */
 
 .profile {
 	padding: 5rem 0;
-	margin-top: 50px;
 }
 
 .profile::after {
@@ -265,7 +266,7 @@ img {
 	.profile-user-settings {
 		flex-basis: calc(100% - 10.7rem);
 		display: flex;
-		flex-wrap: nowrap;
+		flex-wrap: wrap;
 		margin-top: 1rem;
 	}
 
@@ -394,19 +395,4 @@ Remove or comment-out the code block below to see how the browser will fall-back
 			margin: 0;
 		}
 	}
-}
-
-.name_username {
-	display: grid;
-	column-gap: 20px;
-}
-
-
-.profile-user-settings {
-	display: flex;
-	align-items: center;
-}
-
-.profile-user-settings .btn {
-	height: fit-content;
 }
